--- a/paginaInicial/styles.css
+++ b/paginaInicial/styles.css
@@ -175,7 +175,7 @@ a img{
   height: 800px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/ufes9.jpg') center 30% no-repeat;
+  background: url('images/mapa1.jpg') center 30% no-repeat;
   background-size: cover;
 }
 
