--- a/paginaInicial/styles.css
+++ b/paginaInicial/styles.css
@@ -175,20 +175,22 @@ a img{
   height: 800px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/mapa1.jpg') center 30% no-repeat;
+  background: url('images/teste.png') center 30% no-repeat;
   background-size: cover;
 }
 
 .logo-font {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   line-height: 1;
-  color: #000000;
+  color: #6ab344;
   font-weight: 500;
+  text-align: left;
+  margin-left: 50px;
 }
 
 .android-slogan {
-  font-size: 60px;
-  padding-top: 160px;
+  font-size: 30px;
+  padding-top: 10px;
 }
 
 .android-sub-slogan {
@@ -211,6 +213,7 @@ a img{
   position: relative;
   padding-top: 60px;
   padding-bottom: 80px;
+  background-color: #6ab344;
 }
 
 .android-screens {
@@ -302,7 +305,7 @@ a img{
 
 .android-wear-section {
   position: relative;
-  background: url('images/wear.png') center top no-repeat;
+  background: url('images/ufes9.jpg') center top no-repeat;
   background-size: cover;
   height: 800px;
 }
@@ -362,7 +365,7 @@ a img{
 }
 
 .android-customized-section-text {
-  max-width: 500px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   padding: 80px 16px 0 16px;
@@ -373,7 +376,7 @@ a img{
   }
 
 .android-customized-section-image {
-  background: url('images/devices.jpg') center top no-repeat;
+  background: url('images/ufes5.jpg') center top no-repeat;
   background-size: cover;
   height: 400px;
 }
