--- a/paginaInicial/styles.css
+++ b/paginaInicial/styles.css
@@ -69,7 +69,7 @@ a img{
 
 .android-header {
   overflow: visible;
-  background-color: white;
+  background-color: white; 
 }
 
   .android-header .material-icons {
@@ -305,7 +305,7 @@ a img{
 
 .android-wear-section {
   position: relative;
-  background: url('images/ufes9.jpg') center top no-repeat;
+  background: url('images/ufesCorte1.png') center top no-repeat;
   background-size: cover;
   height: 800px;
 }
@@ -365,7 +365,7 @@ a img{
 }
 
 .android-customized-section-text {
-  max-width: 1000px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 80px 16px 0 16px;
@@ -376,7 +376,7 @@ a img{
   }
 
 .android-customized-section-image {
-  background: url('images/ufes5.jpg') center top no-repeat;
+  background: url('images/ufesCorte2.png') center top no-repeat;
   background-size: cover;
   height: 400px;
 }
