--- a/paginaInicial/styles.css
+++ b/paginaInicial/styles.css
@@ -69,7 +69,7 @@ a img{
 
 .android-header {
   overflow: visible;
-  background-color: white; 
+  background-color: orange; 
 }
 
   .android-header .material-icons {
@@ -139,6 +139,10 @@ a img{
             order: 3;
   }
 
+.mdl-layout__drawer-button
+{
+  display: none;
+}
 
 .android-drawer {
   border-right: none;
@@ -175,7 +179,7 @@ a img{
   height: 800px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/teste.png') center 30% no-repeat;
+  background: url('images/lampada.png') center 30% no-repeat;
   background-size: cover;
 }
 
@@ -469,6 +473,12 @@ a img{
 
 /**** Mobile layout ****/
 @media (max-width: 900px) {
+
+.mdl-layout__drawer-button
+{
+  display: block;
+}
+
   .android-navigation-container {
     display: none;
   }
