--- a/editor-basico/editor-style.css
+++ b/editor-basico/editor-style.css
@@ -21,6 +21,7 @@
 
 #cartao-dados-mapa {
 	width:320px;
+	display:none;
 }
 
 #cartao-dados-mapa .mdl-card__title {
@@ -37,6 +38,7 @@
 
 #barra-titulo {
 	height:30px;
+	padding-left:30px;
 }
 
 #barra-titulo .mdl-layout__title {
@@ -45,6 +47,7 @@
 
 #barra-menu {
 	height:30px;
+	padding-left:30px;
 }
 
 #barra-menu .mdl-navigation {
@@ -61,18 +64,42 @@
 	background:#ececec;
 	height:40px;
 	color:#737373;
+	padding-left:30px;
 }
 
-#myDiagram {
-	width:100%; 
-	height:500px; 
-	background-color:#ddd;
-	background-image:url(img/info-clique-duplo.png);
-	background-size:250px auto;
-	background-repeat:no-repeat;
-	background-position:center;
+/* Estilos para telas acima de 400px de largura */
+@media screen and (min-width: 750px){
+
+	#myDiagram {
+		width:100%; 
+		height:500px; 
+		background-color:#ddd;
+		background-image:url(img/info-clique-duplo.png);
+		background-size:250px auto;
+		background-repeat:no-repeat;
+		background-position:center;
+	}
 }
 
+/* Estilos para telas abaixo de 400px de largura*/
+@media screen and (max-width: 750px){
 
-
+	#myDiagram {
+		width:100%; 
+		height:500px; 
+		background-color:#ddd;
+		background-image:url(img/info-clique-duplo-celular.png);
+		background-size:250px auto;
+		background-repeat:no-repeat;
+		background-position:center;
+	}
+	
+	#barra-ferramentas {
+		display:none;
+	}
+	
+	#barra-menu {
+		display:none;
+	}
+}
 
