--- a/editor-basico/css/editor-style.css
+++ b/editor-basico/css/editor-style.css
@@ -7,10 +7,6 @@ body {
 	font-family:roboto;
 }
 
-#dados-mapa-celular{
-	background-color:#eee;
-}
-
 #cartao-dados-mapa {
 	position: fixed;
 	display: block;
@@ -49,7 +45,6 @@ body {
 }
 
 #barra-titulo {
-	height:30px;
 	padding-left:10px;
 	background-color:#311c9e;
 }
@@ -87,7 +82,11 @@ body {
 }
 
 /* Estilos para telas acima de 400px de largura */
-@media screen and (min-width: 750px){
+@media screen and (min-width: 750px) {
+
+	.apenas-telas-pequenas {
+		display:none;
+	}
 
 	#myDiagram {
 		width:100%; 
@@ -98,10 +97,18 @@ body {
 		background-repeat:no-repeat;
 		background-position:center;
 	}
+	
+	#barra-titulo {	
+		height:30px;
+	}
 }
 
 /* Estilos para telas abaixo de 400px de largura*/
-@media screen and (max-width: 750px){
+@media screen and (max-width: 750px) {
+
+	.apenas-telas-grandes {
+		display:none;
+	}
 
 	#myDiagram {
 		width:100%; 
@@ -113,8 +120,14 @@ body {
 		background-position:center;
 	}
 	
-	#barra-ferramentas {
-		display:none;
+	#barra-titulo {
+		padding-left:10px;
+		background-color:#311c9e;
+		height:60px;
+	}
+
+	#barra-titulo .mdl-layout__title {
+		cursor:pointer;
 	}
 	
 	#barra-menu {
