--- a/paginaInicial/css/styles.css
+++ b/paginaInicial/css/styles.css
@@ -179,7 +179,7 @@ a img{
   height: 800px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/lamp.png') center 30% no-repeat;
+  background: url('../images/lamp.png') center 30% no-repeat;
   background-size: cover;
 }
 
@@ -316,7 +316,7 @@ a img{
 
 .android-wear-section {
   position: relative;
-  background: url('images/ufesCorte1.png') center top no-repeat;
+  background: url('../images/ufesCorte1.png') center top no-repeat;
   background-size: cover;
   height: 800px;
 }
@@ -387,7 +387,7 @@ a img{
   }
 
 .android-customized-section-image {
-  background: url('images/ufesCorte2.png') center top no-repeat;
+  background: url('../images/ufesCorte2.png') center top no-repeat;
   background-size: cover;
   height: 400px;
 }
@@ -494,10 +494,11 @@ a img{
   margin-left: 3px;
 }
 
+
 .isaque-card-image.mdl-card {
-  width: 256px;
-  height: 256px;
-  background: url('images/isaque.jpg') center / cover;
+  width: 200px;
+  height: 200px;
+  background: url('../images/isaque.jpg') center / cover;
 }
 .isaque-card-image > .mdl-card__actions {
   height: 52px;
@@ -511,9 +512,9 @@ a img{
 }
 
 .israel-card-image.mdl-card {
-  width: 256px;
-  height: 256px;
-  background: url('images/israel.jpg') center / cover;
+  width: 200px;
+  height: 200px;
+  background: url('../images/israel.jpg') center / cover;
 }
 .israel-card-image > .mdl-card__actions {
   height: 52px;
@@ -525,6 +526,164 @@ a img{
   font-size: 14px;
   font-weight: 500;
 }
+
+.raphael-card-image.mdl-card {
+  width: 200px;
+  height: 200px;
+  background: url('../images/raphael.jpg') center / cover;
+}
+.raphael-card-image > .mdl-card__actions {
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.raphael-card-image__filename {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.breno-card-image.mdl-card {
+  width: 200px;
+  height: 200px;
+  background: url('../images/breno.jpg') center / cover;
+}
+.breno-card-image > .mdl-card__actions {
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.breno-card-image__filename {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.marcelo-card-image.mdl-card {
+  width: 200px;
+  height: 200px;
+  background: url('../images/marcelo.jpg') center / cover;
+}
+.marcelo-card-image > .mdl-card__actions {
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.marcelo-card-image__filename {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+
+
+
+
+/* Team
+---------------------------------*/
+.team-leader-block{
+	max-width:993px;
+	margin:0 auto;
+}
+.team-leader-box{
+	width:30.66%;
+	margin-right: 3.82979%;
+	height: 490px;
+	overflow: hidden;
+	text-align: center;
+	float: left;
+}
+.team-leader-box span{
+	margin-bottom:24px;
+	display:block;
+}
+.team-leader-box:nth-of-type(3n+0){ margin:0;}
+.team-leader{
+	width:auto;
+	height:auto;
+	position:relative;
+	border-radius:50%;
+	box-shadow:0px 0px 0px 7px rgba(241,241,241,0.80);
+	margin:7px 7px 25px 7px;
+	
+}
+.team-leader-shadow{
+	transition:all 0.3s ease-in-out;
+	-moz-transition:all 0.3s ease-in-out;
+	-webkit-transition:all 0.3s ease-in-out;
+	border-radius:50%;
+	position:absolute;
+	width:100%;
+	height:100%;
+	z-index:10;
+	border-radius:50%;
+}
+.team-leader-shadow a{
+	display:block;
+	width:100%;
+	height:100%;
+}
+.team-leader:hover .team-leader-shadow{
+	box-shadow:inset  0px 0px 0px 148px rgba(17,17,17,0.80);
+}
+.team-leader:hover ul{ display:block; opacity:1}
+.team-leader img{
+	display:block;
+	border-radius:50%;
+}
+.team-leader ul{
+	display:block;
+	opacity:0;
+	padding:0;
+	margin:0;
+	list-style:none;
+	position:absolute;
+	left:0;
+	top:50%;
+	width:100%;
+	text-align:center;
+	margin-top:-14px;
+	z-index:15;
+	transition:all 0.6s ease-in-out;
+	-moz-transition:all 0.6s ease-in-out;
+	-webkit-transition:all 0.6s ease-in-out;
+}
+.team-leader ul li{
+	display:inline;
+	margin:0 11px;
+}
+.team-leader ul li a{
+	font-family: 'FontAwesome';
+	display:inline-block;
+	font-size:28px;
+	color:#fff;	
+	transition:all 0.3s ease-in-out;
+	-moz-transition:all 0.3s ease-in-out;
+	-webkit-transition:all 0.3s ease-in-out;
+}
+.team-leader ul li a:hover, .team-leader ul li a:focus{
+	text-decoration:none;
+}
+.team-leader ul li a.fa-twitter:hover{
+	color:#55acee;
+}
+.team-leader ul li a.fa-facebook:hover{
+	color:#3b5998;
+}
+.team-leader ul li a.fa-pinterest:hover{
+	color:#cb2026;
+}
+.team-leader ul li a.fa-google-plus:hover{
+	color:#dd4b39;
+}
+
+/* Fim Team
+---------------------------------*/
+
+
+
+
+
 
 
 
