--- a/paginaInicial/css/styles.css
+++ b/paginaInicial/css/styles.css
@@ -69,7 +69,7 @@ a img{
 
 .android-header {
   overflow: visible;
-  background-color: #512DA8; 
+  background-color: #311c9e; 
 }
 
   .android-header .material-icons {
@@ -150,7 +150,7 @@ a img{
 
   .android-drawer-separator {
     height: 1px;
-    background-color: #dcdcdc;
+    background-color: #311c9e;
     margin: 8px 0;
   }
 
@@ -165,7 +165,7 @@ a img{
 
   .android-drawer .mdl-layout-title {
     position: relative;
-    background: #6ab344;
+    background: #311c9e;
     height: 160px;
   }
 
@@ -193,8 +193,8 @@ a img{
 }
 
 .android-slogan {
-  font-size: 30px;
-  padding-top: 10px;
+  font-size: 40px;
+  padding-top: 200px;
 }
 
 .android-sub-slogan {
