--- a/paginaInicial/css/styles.css
+++ b/paginaInicial/css/styles.css
@@ -62,8 +62,8 @@ a img{
 
 
 .android-logo-image {
-  height: 40px;
-  width: 150px;
+  height: 50px;
+  width: 300px;
 }
 
 
@@ -186,7 +186,7 @@ a img{
 .logo-font {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   line-height: 1;
-  color: #6ab344;
+  color: #ff3d00;
   font-weight: 500;
   text-align: left;
   margin-left: 50px;
@@ -682,9 +682,29 @@ a img{
 
 
 
-
-
-
+.contato-card
+{
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 80px;
+  background-color: #FFA726;
+}
+.contato
+{
+  position: relative;
+  padding-bottom: 30%;
+  height: 0;
+  overflow: hidden;
+  background-color: #FFA726;
+}
+.contato iframe
+{
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 90% !important;
+  height: 90% !important;
+}
 
 
 /**** Mobile layout ****/
@@ -768,4 +788,11 @@ a img{
   .android-footer .mdl-mega-footer--bottom-section {
     display: none;
   }
+
+.contato
+{
+  padding-bottom: 55%;
+}
+
+
 }
