--- a/paginaInicial/css/styles.css
+++ b/paginaInicial/css/styles.css
@@ -68,7 +68,7 @@ a img{
 .logoCentral
 {
   height: 35px;
-  width: 100px; 
+  width: 50px; 
 }
 .logoLateral
 {
@@ -747,7 +747,7 @@ a img{
 {
    display: none;
 }
-
+}
 
 @media only screen and (min-width: 480px) { ... }
 @media only screen and (min-width: 600px) { ... }
