--- a/editor/css/index-style.css
+++ b/editor/css/index-style.css
@@ -8,16 +8,9 @@
 	border: 2px solid #fff !important;
 }
 
-
-
-@font-face {
-    font-family: roboto;
-    src: url(fontes/RobotoCondensed-Light.ttf);
-}
-
 body {
 	background-color:#311c9e;
-	font-family:roboto;
+	font-family:robotoCondensedLight;
 	color:#fff !important;
 }
 
@@ -33,6 +26,7 @@ body {
 }
 
 #conteudo h1 {
+	font-family:robotoCondensedLight;
 	font-size:250%;
 	padding:0;
 	margin:0;
