--- a/paginaInicial/css/styles.css
+++ b/paginaInicial/css/styles.css
@@ -654,6 +654,44 @@ padding-top: 16px;
   font-size: 14px;
   font-weight: 500;
 }
+
+.vini-card-image.mdl-card 
+{
+  width: 200px;
+  height: 200px;
+  background: url('../images/vini.jpg') center / cover;
+}
+.vini-card-image > .mdl-card__actions 
+{
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.vini-card-image__filename 
+{
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.gugu-card-image.mdl-card 
+{
+  width: 200px;
+  height: 200px;
+  background: url('../images/gugu.jpg') center / cover;
+}
+.gugu-card-image > .mdl-card__actions 
+{
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.gugu-card-image__filename 
+{
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
 /* Fim Desenvolvedores */
 
 /* Contato */
